--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,7 +9,6 @@
       "DOM.Iterable"
       // "WebWorker"
     ],
-
     "strict": true,
     "exactOptionalPropertyTypes": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -35,6 +34,7 @@
     "@fe-pdf.ts-web/": "./src/pdf/pdf.ts-web/",
     "@fe-src/": "./src/",
     "@fe-util/": "./util/",
+    "@file-system-access": "./node_modules/@types/wicg-file-system-access/index.d.ts",
     "@hono/hono": "jsr:@hono/hono@^4.6.3",
     "@std/assert": "jsr:@std/assert@^1.0.6",
     "@std/cli": "jsr:@std/cli@^1.0.6",
@@ -47,7 +47,7 @@
     "@wretch": "./src/3rd/wretch-2.9.0/dist/index.js",
     "@xstate": "npm:xstate@^5.19.1",
     "@yaml": "npm:yaml@^2.5.1",
-    "@zod": "./src/3rd/zod-3.23.8/lib/index.mjs"
+    "@zod": "./src/3rd/zod-3.23.8/lib/index.mjs",
   },
   "workspace": [
     "./src/test",
